# NeuralGTO

./: .dockerignore  .env.example  .gitignore  .gitmodules  AGENTS.md  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE  NEXT_STEPS.md  PROJECT_OVERVIEW.md  README.md  main.py  package-lock.json  pyproject.toml  requirements.txt  requirements_ece.txt  scooped.md
.devcontainer/: devcontainer.json
.streamlit/: config.toml  secrets.toml.example
backend/: Dockerfile  pyproject.toml  requirements.oracle.txt
backend/app/: __init__.py  config.py  main.py
backend/app/api/: __init__.py  analyze.py
backend/app/models/: __init__.py  poker_types_adapter.py  schemas.py
backend/app/services/: __init__.py  advice_formatter.py
backend/app/solvers/: __init__.py
backend/deploy/: cloudflare-tunnel.yml  neuralgto-api.service  nginx.conf  setup_oracle.sh  update.sh
backend/docs/: API_CONTRACT.md
backend/tests/: __init__.py  test_advice_formatter.py  test_analyze.py  test_health.py  test_reanalyze_street.py
docs/: CHANGELOG.md  CLOUD_RUN_DEPLOYMENT.md  COMPETITIVE_ANALYSIS.md  DEPLOYMENT.md  POKERGPT_ARCHITECTURE.md  TEXASSOLVER_REFERENCE.md
neuralgto-web/: .env.example  env.example  index.html  package-lock.json  package.json  vite.config.ts
neuralgto-web/public/: _headers  _redirects
poker_gpt/: __init__.py  auth.py  cache.py  config.py  dataset_generator.py  hand_history.py  history.py  llm_client.py  llm_pruner.py  main.py  multiway.py  nl_advisor.py  nl_parser.py  poker_types.py  preflop_lookup.py  quiz.py  range_display.py  range_utils.py  sanity_checker.py  security.py  solver_harness.py  solver_input.py  solver_pruner_cpp.py  solver_runner.py  spot_frequency.py  strategy_extractor.py  validation.py  web_app.py
poker_gpt/evaluation/: __init__.py  coverage_diagnostic.py  evaluator.py  pokerbench.py  run_T4_2a_smoke_test.py  run_eval.py  run_t43_comparison.py
poker_gpt/prompts/: advisor_beginner_system.txt  (+5 more)
scripts/: install_hooks.py  pre-commit-check.py
solver_cpp/: pruner_bindings.cpp
(+36 files in other folders)
